--- a/composer.json
+++ b/composer.json
@@ -24,14 +24,13 @@
   "require": {
     "php": ">=8.1",
     "ext-json": "*",
-    "doctrine/annotations": "^2.0",
-    "laminas/laminas-diactoros": "^2.2.2",
+    "laminas/laminas-diactoros": "^3",
     "nyholm/psr7": "^1.1",
-    "symfony/console": "^6 || ^7",
-    "symfony/framework-bundle": "^6 || ^7",
-    "symfony/psr-http-message-bridge": "^6 || ^7",
-    "symfony/translation": "^6 || ^7",
-    "symfony/validator": "^6 || ^7",
+    "symfony/console": "^7",
+    "symfony/framework-bundle": "^7",
+    "symfony/psr-http-message-bridge": "^7",
+    "symfony/translation": "^7",
+    "symfony/validator": "^7",
     "thecodingmachine/cache-utils": "^1",
     "thecodingmachine/graphqlite": "^7.0",
     "thecodingmachine/graphqlite-symfony-validator-bridge": "^7.0"
@@ -44,9 +43,9 @@
     "phpstan/phpstan": "^1.8",
     "phpunit/phpunit": "^8.5.19 || ^9.5.8",
     "roave/security-advisories": "dev-latest",
-    "symfony/phpunit-bridge": "^6 || ^7",
-    "symfony/security-bundle": "^6 || ^7",
-    "symfony/yaml": "^6|^7"
+    "symfony/phpunit-bridge": "^7",
+    "symfony/security-bundle": "^7",
+    "symfony/yaml": "^7"
   },
   "conflict": {
     "mouf/classname-mapper": "<1.0.2",
