--- a/config-template/packages/graphqlite.yaml
+++ b/config-template/packages/graphqlite.yaml
@@ -1,6 +1,7 @@
 # Read more about GraphQLite available options at: https://graphqlite.thecodingmachine.io/docs/symfony-bundle
 graphqlite:
-  namespace:
-    controllers: App\GraphqlController\
-    types:
-      - App\
+  namespaces:
+    default:
+      controllers: App\GraphqlController\
+      types:
+        - App\
